[metadata]
name = rpwavgen
author = N3YJN
author_email="brianwgray@ctrlu.net"
url='https://www.CTRLu.net'
version = 0.0.1
description= Repeater WAV Generator for ICOM Repeaters
requires-python = ">=3.7"


[options]
install_requires =
    argparse >= 0
    pyttsx3 >= 2.90
    pydub >= 0.25.1

[options.packages.find]
where=src  # . by default

[options.entry_points]
console_scripts =
    rpwavgen = rpwavgen:main